# SPM-project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/dac/: dac.h  scheduler.h
notebooks/: analysis.ipynb
report/: main-blx.bib  main.tex
src/dac/: CMakeLists.txt  scheduler.cpp  sync_job_list.cpp  worker.cpp
src/test/: CMakeLists.txt  mergesort_dac.cpp  quicksort_dac.cpp
